--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,14 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# Jetbrains
+.fleet
+.idea
+
+# vscode
+.vscode
+.code
+
 # Runtime data
 pids
 *.pid
