--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ."
+    "start": "node sharding",
+    "test": "node ."
   },
   "author": "",
   "license": "ISC",
