can now store users in database + database file

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dev-penguins",
-  "version": "1.0.0",
+  "version": "0.6.0",
   "description": "",
-  "main": "index.js",
+  "main": "sharding.js",
   "scripts": {
     "start": "node sharding",
     "test": "node ."
